feat: sessions improvements (#280)
* feat: sessions improvements

* chore: fix build

* remove comments

* chore: group sessions + reorder

* chore: fix build

--- a/docs/Modules/sessionvalidationmodule.mdx
+++ b/docs/Modules/sessionvalidationmodule.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 4
+sidebar_position: 3
 ---
 
 # Session Key Manager
@@ -50,4 +50,4 @@ const sessionModule = await createSessionKeyManagerModule({
 });
 ```
 
-For full implementation see this [guide](/tutorials/sessionkeys)
+For full implementation see this [guide](/tutorials/sessions/createSession)
