--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_label: "Quickstart"
-sidebar_position: 2
+sidebar_label: "Quickstart: Core SDK"
+sidebar_position: 3
 ---
 
 # Quickstart ⚡️
