--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -3,7 +3,7 @@ sidebar_label: "Quickstart: Core SDK"
 sidebar_position: 3
 ---
 
-# Quickstart ⚡️
+# Quickstart: Core SDK ⚡️
 
 In this guide, we will create a smart account and mint an NFT with [Biconomy's SDK](https://github.com/bcnmy/biconomy-client-sdk) and Node.js.
 
