--- a/docs/quickstart-react.mdx
+++ b/docs/quickstart-react.mdx
@@ -174,4 +174,4 @@ useEffect(() => {
 
 ### Next Steps
 
-Congratulations! You have sent your first sponsored transaction with Biconomy.
+Congratulations! You have sent your first sponsored transaction with Biconomy. You can now explore specific methods [here](/react).
