--- a/docs/quickstart-react.mdx
+++ b/docs/quickstart-react.mdx
@@ -29,7 +29,7 @@ import TabItem from "@theme/TabItem";
 
 ```bash
 
-bun add react react-dom viem wagmi @tanstack/react-query @biconomy/account @biconomy/use-aa
+bun add viem wagmi @tanstack/react-query @biconomy/account @biconomy/use-aa
 
 ```
 
@@ -39,7 +39,7 @@ bun add react react-dom viem wagmi @tanstack/react-query @biconomy/account @bico
 
 ```bash
 
-npm install react react-dom viem wagmi @tanstack/react-query @biconomy/account @biconomy/use-aa
+npm install viem wagmi @tanstack/react-query @biconomy/account @biconomy/use-aa
 
 ```
 
@@ -48,7 +48,7 @@ npm install react react-dom viem wagmi @tanstack/react-query @biconomy/account @
 
 ```bash
 
-yarn add react react-dom viem wagmi @tanstack/react-query @biconomy/account @biconomy/use-aa
+yarn add viem wagmi @tanstack/react-query @biconomy/account @biconomy/use-aa
 
 ```
 
@@ -57,7 +57,7 @@ yarn add react react-dom viem wagmi @tanstack/react-query @biconomy/account @bic
 
 ```bash
 
-pnpm add react react-dom viem wagmi @tanstack/react-query @biconomy/account @biconomy/use-aa
+pnpm add viem wagmi @tanstack/react-query @biconomy/account @biconomy/use-aa
 
 ```
 
