--- a/docs/quickstart-react.mdx
+++ b/docs/quickstart-react.mdx
@@ -77,7 +77,8 @@ import { WagmiProvider, createConfig } from "wagmi";
 import { QueryClient, QueryClientProvider } from "@tanstack/react-query";
 
 export default function Providers({ children }: { children: React.ReactNode }) {
-  const paymasterApiKey = process.env.NEXT_PUBLIC_PAYMASTER_API_KEY || "";
+  const biconomyPaymasterApiKey =
+    process.env.NEXT_PUBLIC_PAYMASTER_API_KEY || "";
   const bundlerUrl = process.env.NEXT_PUBLIC_BUNDLER_URL || "";
 
   const config = createConfig({
@@ -94,7 +95,7 @@ export default function Providers({ children }: { children: React.ReactNode }) {
       <QueryClientProvider client={queryClient}>
         <BiconomyProvider
           config={{
-            paymasterApiKey,
+            biconomyPaymasterApiKey,
             bundlerUrl,
           }}
           queryClient={queryClient}
