--- a/docs/quickstart.mdx
+++ b/docs/quickstart.mdx
@@ -1,9 +1,9 @@
 ---
-sidebar_label: "Quickstart"
-sidebar_position: 2
+sidebar_label: "Quickstart: Core SDK"
+sidebar_position: 3
 ---
 
-# Quickstart ⚡️
+# Quickstart: Core SDK ⚡️
 
 In this guide, we will create a smart account and mint an NFT with [Biconomy's SDK](https://github.com/bcnmy/biconomy-client-sdk) and Node.js.
 
