removed : from 7677 title

--- a/docs/Paymaster/7677/index.mdx
+++ b/docs/Paymaster/7677/index.mdx
@@ -1,7 +1,6 @@
 ---
 sidebar_position: 4
-title: ERC-7677: Paymaster Web Service Capability
-
+title: ERC-7677 Paymaster Web Service Capability
 ---
 
 The Biconomy Paymaster supports ERC-7677 standard, which is an [EIP-5792](https://eips.ethereum.org/EIPS/eip-5792) compliant capability for paymasters
