minor syntax fixes in docs

--- a/docs/Account/index.mdx
+++ b/docs/Account/index.mdx
@@ -6,7 +6,7 @@ title: Smart Accounts
 
 # Smart Accounts
 
-In the context ERC 4337, a smart account is a smart contract account used to manage assets and create `userOperations` or `userOps`.
+In the context of ERC 4337, a smart account is a smart contract account used to manage assets and create `userOperations` or `userOps`.
 These are pseudo-transaction objects that eventually execute as a transaction on the EVM.
 They replace traditional Externally Owned Accounts (Wallets).
 
