--- a/docs/Paymaster/index.mdx
+++ b/docs/Paymaster/index.mdx
@@ -10,13 +10,13 @@ With Biconomy's Paymaster service, you can manage gas fees for your users effort
 **Revenue sharing**: on a case-by-case basis depending on volumes, we do offer a split of the Paymaster fee revenue with selected Apps. 
 <button class="my-button" > <a href="https://www.biconomy.io/book-a-demo" target="_blank" rel="noopener noreferrer">Get in touch</a> </button> to learn more.
 
-In order to use the it, you must [setup the paymaster](/dashboard/paymaster) on the dashboard and obtain the paymasterURL. Biconomy paymaster supports two modes:
+To use it, you must [set up the paymaster](/dashboard/paymaster) on the dashboard and obtain the paymasterURL. Biconomy paymaster supports two modes:
 
 ## Sponsorship Paymaster
 
 ![Sponsored](../images/overview/sponsored.png)
 
-`Sponsorship` mode allows you to pay gas on behalf of the users, by eliminating the need of native tokens to be paid by the users. 
+`Sponsorship` mode allows you to pay gas on behalf of the users, by eliminating the need for native tokens to be paid by the users. 
 
 ## Token Paymaster
 
