chore: add -devx

--- a/docs/tutorials/utils/DAN/index.mdx
+++ b/docs/tutorials/utils/DAN/index.mdx
@@ -18,7 +18,7 @@ And obtain the `VITE_SILENCE_LABS_NPM_TOKEN` from our support team, and add it t
 :::
 
 ```ts
-import { danSDK } from "@biconomy/account"
+import { danSDK } from "@biconomy-devx/account"
 
 const danSessionKeyPayload = await danSDK.generateSessionKey(...options);
 const signature = await danSDK.signMessage("My message", ...moreOptions);
