Add redirection for new chains

--- a/docs/supportedNetworks.mdx
+++ b/docs/supportedNetworks.mdx
@@ -41,6 +41,8 @@ This is  the list of networks supported by our Bundlers & Paymaster.
 |Morph| ✅ |  | 
 |Sei| ✅ (Devnet) | ✅ | 
 
+Need support for a new chain? Contact us [here](https://meetings-eu1.hubspot.com/biconomy/monika).
+
 ## Supported Tokens
 Our Paymaster not only allows you to sponsor transactions for your users but also allows users to pay for transactions using ERC20 tokens. Below are the supported tokens list grouped by chain.
 
