replace broken links

--- a/docs/Account/smartAccountv1/tutorials/React_vite/sdk-integration.mdx
+++ b/docs/Account/smartAccountv1/tutorials/React_vite/sdk-integration.mdx
@@ -62,7 +62,7 @@ const paymaster: IPaymaster = new BiconomyPaymaster({
 
 :::info You can get your Paymaster URL and bundler URL from Biconomy Dashboard.
 Follow the steps mentioned
-[here](https://docs.biconomy.io/docs/dashboard). :::
+[here](https://legacy-docs.biconomy.io/docs/dashboard). :::
 
 Let's take a look at some state variables that will help us with our
 implementation:
