--- a/docs/Bundler/integration.mdx
+++ b/docs/Bundler/integration.mdx
@@ -61,7 +61,7 @@ const userOpReceiptMaxDurationIntervals: { [key in number]?: number } = {
 };
 
 const bundler = await create({
-  bundlerUrl: "", // <-- Read about this at https://docs.biconomy.io/dashboard#bundler-url
+  bundlerUrl: "", // <-- Read about this at https://legacy-docs.biconomy.io/dashboard#bundler-url
   userOpReceiptMaxDurationIntervals,
 });
 ```
