--- a/versioned_docs/version-3.0/bundler/integration.mdx
+++ b/versioned_docs/version-3.0/bundler/integration.mdx
@@ -85,7 +85,7 @@ const userOpReceiptMaxDurationIntervals: { [key in ChainId]?: number } = {
 };
 
 const bundler = new Bundler({
-  bundlerUrl: "", // <-- Read about this at https://docs.biconomy.io/dashboard#bundler-url
+  bundlerUrl: "", // <-- Read about this at https://legacy-docs.biconomy.io/dashboard#bundler-url
   chainId: 80002,
   userOpReceiptMaxDurationIntervals,
 });
