--- a/docs/Account/integration.mdx
+++ b/docs/Account/integration.mdx
@@ -72,8 +72,8 @@ console.log(`EOA address: ${eoa}`);
 // ------ 2. Create biconomy smart account instance
 const smartAccount = await createSmartAccountClient({
   signer: client,
-  bundlerUrl: "", // <-- Read about this at https://docs.biconomy.io/dashboard#bundler-url
-  biconomyPaymasterApiKey: "", // <-- Read about at https://docs.biconomy.io/dashboard/paymaster
+  bundlerUrl: "", // <-- Read about this at https://legacy-docs.biconomy.io/dashboard#bundler-url
+  biconomyPaymasterApiKey: "", // <-- Read about at https://legacy-docs.biconomy.io/dashboard/paymaster
 });
 const smartAccountAddress = await smartAccount.getAccountAddress();
 console.log("Smart Account Address", smartAccountAddress);
@@ -91,8 +91,8 @@ let signer = new ethers.Wallet("PRIVATE_KEY", provider);
 
 const biconomySmartAccountConfig = {
   signer: signer,
-  bundlerUrl: "", // <-- Read about this at https://docs.biconomy.io/dashboard#bundler-url
-  biconomyPaymasterApiKey: "", // <-- Read about at https://docs.biconomy.io/dashboard/paymaster
+  bundlerUrl: "", // <-- Read about this at https://legacy-docs.biconomy.io/dashboard#bundler-url
+  biconomyPaymasterApiKey: "", // <-- Read about at https://legacy-docs.biconomy.io/dashboard/paymaster
 };
 
 const smartAccount = await createSmartAccountClient(biconomySmartAccountConfig);
