--- a/docs/Paymaster/integration.mdx
+++ b/docs/Paymaster/integration.mdx
@@ -54,8 +54,8 @@ Set up a paymaster for the smart account by providing only the paymaster API key
       signer: signer,
       chainId: 80002
   bundlerUrl:
-    "https://docs.biconomy.io/dashboard#bundler-url", // <-- Read about this here
-  biconomyPaymasterApiKey: "", // <-- Read about at https://docs.biconomy.io/dashboard/paymaster
+    "https://legacy-docs.biconomy.io/dashboard#bundler-url", // <-- Read about this here
+  biconomyPaymasterApiKey: "", // <-- Read about at https://legacy-docs.biconomy.io/dashboard/paymaster
     }
   );
 ```
@@ -66,7 +66,7 @@ If you wish to pass "strictMode" to your Paymaster you need to create the instan
   import { createSmartAccountClient, IPaymaster, createPaymaster } from "@biconomy/account";
 
   const paymaster: IPaymaster = await createPaymaster({
-    paymasterUrl: "", // <-- Read about at https://docs.biconomy.io/dashboard/paymaster
+    paymasterUrl: "", // <-- Read about at https://legacy-docs.biconomy.io/dashboard/paymaster
     strictMode: true
   });
 
