--- a/versioned_docs/version-3.0/account/integration.mdx
+++ b/versioned_docs/version-3.0/account/integration.mdx
@@ -58,7 +58,7 @@ Now you can simply create smart accounts like this.
   const biconomySmartAccountConfig = {
     signer: signer,
     chainId: 80002
-    biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster",
+    biconomyPaymasterApiKey: "https://legacy-docs.biconomy.io/dashboard/paymaster",
     bundlerUrl: ""
   };
 
