--- a/versioned_docs/version-3.0/paymaster/integration.mdx
+++ b/versioned_docs/version-3.0/paymaster/integration.mdx
@@ -53,7 +53,7 @@ Set up a paymaster for the smart account by providing only the paymaster API key
     {
       signer: signer,
       chainId: 80002
-      biconomyPaymasterApiKey: "https://docs.biconomy.io/dashboard/paymaster"
+      biconomyPaymasterApiKey: "https://legacy-docs.biconomy.io/dashboard/paymaster"
       bundlerUrl: "bundler url"
     }
   );
